--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,16 @@ google_sign_in: ^5.0.3
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_signin_button: ^2.0.0
   cloud_firestore: ^3.4.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.5.1
   firebase_core: ^1.20.0
   flutter:
     sdk: flutter
+  flutter_signin_button: ^2.0.0
   fluttertoast: ^8.0.9
+  google_sign_in: ^5.4.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_lints: ^1.0.0
