--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,22 @@ google_sign_in: ^5.0.3
 # versions available, run `flutter pub outdated`.
 dependencies:
   cloud_firestore: ^3.4.1
+  connectivity_plus: ^2.3.6
   cupertino_icons: ^1.0.2
+  email_validator: ^2.1.17
   firebase_auth: ^3.5.1
   firebase_core: ^1.20.0
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^4.4.0+1
   flutter_signin_button: ^2.0.0
   fluttertoast: ^8.0.9
+  font_awesome_flutter: ^9.0.0
   google_sign_in: ^5.4.0
+  http: ^0.13.4
   provider: ^6.0.3
+  rounded_loading_button: ^2.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_lints: ^1.0.0
