--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,9 +60,11 @@ flutter {
 }
 
 dependencies {
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    //implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
 
 
     // Add the dependencies for the desired Firebase products
