--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,17 +38,20 @@ dependencies:
   email_validator: ^2.1.17
   firebase_auth: ^3.5.1
   firebase_core: ^1.20.0
+  firebase_storage: ^10.3.7
   flutter:
     sdk: flutter
   flutter_facebook_auth: ^4.4.0+1
   flutter_polyline_points: ^1.0.0
   flutter_signin_button: ^2.0.0
+  flutter_svg: ^1.1.4
   fluttertoast: ^8.0.9
   font_awesome_flutter: ^9.0.0
   geolocator: ^9.0.1
   google_maps_flutter: ^2.1.10
   google_sign_in: ^5.4.0
   http: ^0.13.4
+  image_picker: ^0.8.5+3
   provider: ^6.0.3
   rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.15
