--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   provider: ^6.0.3
   rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.15
+  firebase_storage_web: ^3.3.5
 
 dev_dependencies:
   flutter_lints: ^1.0.0
