--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
 
    <application
-        android:label="auth_bikeapp"
+        android:label="BikeApp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
