--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,11 @@ dependencies:
   firebase_auth: ^3.5.1
   firebase_core: ^1.20.0
   firebase_storage: ^10.3.7
+  firebase_storage_web: ^3.3.5
   flutter:
     sdk: flutter
   flutter_facebook_auth: ^4.4.0+1
+  flutter_launcher_icons: ^0.10.0
   flutter_polyline_points: ^1.0.0
   flutter_signin_button: ^2.0.0
   flutter_svg: ^1.1.4
@@ -55,12 +57,18 @@ dependencies:
   provider: ^6.0.3
   rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.15
-  firebase_storage_web: ^3.3.5
 
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  #ios: true
+  #remove_alpha_ios: true
+  image_path: "assets/appicon.png"
+  adaptive_icon_foreground: "assets/appicon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
