--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   geocoding: ^2.0.5
   geolocator: ^9.0.1
+  google_fonts: ^3.0.1
   google_maps_flutter: ^2.1.10
   google_sign_in: ^5.4.0
   http: ^0.13.4
